@startuml class
' Class diagram (domain + solver layer) for the Timetable System
skinparam shadowing false
skinparam classBackgroundColor #F4F7FF
skinparam classBorderColor #1D4ED8
skinparam classArrowColor #1D4ED8
hide empty members

package "Domain model" {

  class University {
    +id : int
    +name : str
    +slug : str
    +overflow_threshold : float
  }

  class Faculty {
    +id : int
    +name : str
    +code : str
    +sessions_per_week : int
    +session_duration_hours : int
  }

  class Department {
    +id : int
    +name : str
    +code : str
  }

  class Level {
    +id : int
    +number : int
  }

  class Class {
    +id : int
    +name : str
    +population : int
  }

  class ClassGroup {
    +id : int
    +name : str
    +size : int
  }

  class Building {
    +id : int
    +name : str
  }

  class Room {
    +id : int
    +name : str
    +capacity : int
    +room_type : str
    +is_active : bool
  }

  class Semester {
    +id : int
    +name : str
    +is_active : bool
  }

  class TimeSlot {
    +id : int
    +day_of_week : str
    +start_time : str
    +end_time : str
  }

  class Course {
    +id : int
    +code : str
    +name : str
    +room_type_required : str
    +weekly_hours : int
  }

  class User {
    +id : int
    +email : str
    +full_name : str
    +role : str
    +is_active : bool
  }

  class Lecturer {
    +id : int
  }

  class LecturerAvailability {
    +id : int
  }

  class Student {
    +id : int
  }

  class TimetableRun {
    +id : int
    +name : str
    +status : str
    +generated_at : datetime
    +submit_for_review()
    +publish()
  }

  class TimetableEntry {
    +id : int
    +week_pattern : str
    +is_overcapacity : bool
    +is_merged : bool
  }

  class TimetableConflict {
    +id : int
    +conflict_type : str
    +resolved : bool
    +resolution : str
  }

  class GenerationJob {
    +id : int
    +status : str
    +error_message : str
  }

  class FacultyHeadApproval {
    +id : int
    +status : str
    +comment : str
    +approve()
    +reject()
  }

  class Notification {
    +id : int
    +message : str
    +notification_type : str
    +is_read : bool
  }
}

package "Solver layer" {

  class DbPreprocessor {
    +build_solver_input(run, semester, faculties, buildings) : SolverInput
  }

  class Preprocessor {
    +compute_merge_decision(course, classes, rooms, ...) : ScheduleSession[]
    +compute_lab_split(course, class, labs, ...) : ScheduleSession[]
  }

  class ScheduleSession {
    +id : str
    +course_id : int
    +lecturer_id : int
    +room_type_required : str
    +class_ids : int[]
    +population : int
    +is_merged : bool
  }

  class SolverInput {
    +sessions : ScheduleSession[]
    +time_slots : dict[]
    +rooms : dict[]
    +lecturer_unavailability : dict
  }

  class CpSatSolver {
    +solve_timetable(input : SolverInput) : SolverResult
  }

  class SolverResult {
    +assignments : SolverAssignment[]
    +solve_time_seconds : float
    +status : str
  }

  class Postprocessor {
    +save_solver_result(run, result, db)
  }

  class ConflictResolver {
    +apply_resolution(conflict, resolution, db)
  }
}

' --- Domain associations ---
University "1" o-- "*" Faculty
Faculty "1" o-- "*" Department
Department "1" o-- "*" Level
Level "1" o-- "*" Class
Class "1" o-- "*" ClassGroup
University "1" o-- "*" Building
Building "1" o-- "*" Room
University "1" o-- "*" Semester
Semester "1" o-- "*" TimeSlot
Department "1" o-- "*" Course
Course "0..1" --> "1" Lecturer
User "1" -- "0..1" Lecturer
User "1" -- "0..1" Student
Lecturer "1" o-- "*" LecturerAvailability
LecturerAvailability "*" --> "1" TimeSlot

Semester "1" o-- "*" TimetableRun
TimetableRun "1" *-- "*" TimetableEntry
TimetableRun "1" *-- "*" TimetableConflict
TimetableRun "1" *-- "*" GenerationJob
TimetableRun "1" *-- "*" FacultyHeadApproval
TimetableEntry "*" --> "1" Course
TimetableEntry "*" --> "1" Room
TimetableEntry "*" --> "1" TimeSlot
TimetableEntry "*" --> "1" Lecturer
TimetableEntry "*" --> "*" Class
FacultyHeadApproval "*" --> "1" Faculty
FacultyHeadApproval "*" --> "1" User
Notification "*" --> "1" User

' --- Solver collaborations ---
DbPreprocessor ..> Preprocessor
DbPreprocessor ..> SolverInput
Preprocessor ..> ScheduleSession
SolverInput o-- ScheduleSession
CpSatSolver ..> SolverInput
CpSatSolver ..> SolverResult
Postprocessor ..> SolverResult
Postprocessor ..> TimetableEntry
ConflictResolver ..> TimetableConflict

@enduml
